# JPP

./: .gitignore
haskell_play/: first_lab.hs  lab02.hs  lab03.hs
interpreter/: interpreter.cabal
interpreter/src/: AbsGrammar.hs  Compile.hs  DynGrammar.hs  DynamicGrammar.hs  Err.hs  Exp.hs  LexGrammar.hs  Main.hs  Makefile  ParGrammar.hs  PrintGrammar.hs  SkelGrammar.hs  TestFiles.hs  TestGrammar.hs  Util.hs  grammar.cf  interpret_test.sh  ocena-fun.txt  test.sh
interpreter/src/good/: 1.ad  2.ad  3.ad  basic_lists.ad  basic_match.ad  call_by_need.ad  closures.ad  comment_test  example  fast_fib.ad  fib.ad  higher_order_lists.ad  infinite_list.ad  lazy_if.ad  list_exists.ad  list_match.ad  list_sum.ad  local_scope.ad  match_gen.ad  match_test  mut_rec.ad  nested_let.ad  nested_let2.ad  tree_match.ad  tuple.ad  type_precedence
interpreter/src/parseable/: app_test  arithmetics  let_test  tuple_test
interpreter/src/syntax/: grammar.cf  ocena-fun.txt  test.sh
interpreter/src/syntax/bad/: 2
interpreter/src/syntax/good/: 1  2  3  4  5  6  7  arithmetics  basic_declarations  comment_test  if_test  let_test  match_test  type_def  type_precedence  unapply
lab/: lab04.hs
prolog/: defs.pl  sp371329.pl  test.pl
zadanie1/: Auto.hs  AutoDiff.hs  RunAuto.hs  Test.hs  TestAuto.hs  timeprof.sh
zadanie1/concatTransition/: IneffectiveSimpleTest.ps
zadanie1/true/: 1  2  3  4
