name:                interpreter

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:            

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MiT
license-file:        LICENSE                
author:              Szymon Pajzert
maintainer:          szymonpajzert@gmail.com

-- A copyright notice.
-- copyright:           

-- category:            

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

cabal-version:       >=1.10

executable interpret_test
  main-is:             TestFiles.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       array >= 0.5.1.0,
                       array >= 0.5.1.0,
                       base >=4.8 && <4.9,
                       containers >= 0.5.6.2,
                       mtl >= 2.2.1,
                       transformers >= 0.4.2.0
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options:         -O2 -Wall -fwarn-tabs -fdefer-typed-holes
                     
executable interpreter
  main-is:             Main.hs
  
  -- Modules included in this executable, other than Main.
  -- other-modules:       
  
  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:    
  
  -- Other library packages from which modules are imported.
  build-depends:       array >= 0.5.1.0,
                       array >= 0.5.1.0,
                       base >=4.8 && <4.9,
                       containers >= 0.5.6.2,
                       mtl >= 2.2.1,
                       transformers >= 0.4.2.0
  
  -- Directories containing source files.
  hs-source-dirs:      src
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

  ghc-options:         -O2 -Wall -fwarn-tabs -fdefer-typed-holes
  